Updating to Java 21 and other minor things.